src/kits/tracker/PoseView.cpp
@@ -1992,6 +1992,13 @@ BPoseView::MessageReceived(BMessage *message)
 			if (message->FindInt32("size", &size) == B_OK) {
 				if (size != (int32)IconSizeInt()) {
 					fViewState->SetIconSize(size);
+					
+					// we must save the current view origin if we come from
+					// any icon mode. We can't do that in SetViewMode() since
+					// Refresh() resets the current view origin.
+					if (ViewMode() != kListMode)
+						fViewState->SetIconOrigin(LeftTop());
+										
 					Refresh();	// we need to refresh since the icons need
 								// to be rescaled
 				} else
@@ -2728,6 +2735,11 @@ BPoseView::SetViewMode(uint32 newMode)
 		fViewState->SetListOrigin(origin);
 		newOrigin = fViewState->IconOrigin();
 	}
+	
+	// any transition to kScaleIconMode needs restoring the origin
+	// in any other xIconMode -> xIconMode transition, the origin doesn't change
+	if (ViewMode() == kScaleIconMode)		
+		newOrigin = fViewState->IconOrigin();	
 
 	PinPointToValidRange(newOrigin);
 
